--- a/GloboTicket.TicketManagement.App/GloboTicket.TicketManagement.App.csproj
+++ b/GloboTicket.TicketManagement.App/GloboTicket.TicketManagement.App.csproj
@@ -7,7 +7,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="10.1.1" />
-		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
 		<PackageReference Include="Blazored.LocalStorage" Version="3.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
@@ -17,6 +17,10 @@
 		<PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
 
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\GloboTicket.TicketManagement.Application\GloboTicket.TicketManagement.Application.csproj" />
 	</ItemGroup>
 
 </Project>
