--- a/GloboTicket.TicketManagement.Api/appsettings.json
+++ b/GloboTicket.TicketManagement.Api/appsettings.json
@@ -1,11 +1,7 @@
 {
   "ConnectionStrings": {
-    "GloboTicketTicketManagementConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=GloboTicketTicketManagementDb2;Trusted_Connection=True;"
-  },
-  "EmailSettings": {
-    "FromAddress": "gill@test.com",
-    "ApiKey": "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",
-    "FromName": "Gill"
+    "GloboTicketTicketManagementConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=GloboTicketTicketManagementDb2;Trusted_Connection=True;",
+    "GloboTicketIdentityConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=GloboTicketIdentityDb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -14,5 +10,34 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailSettings": {
+    "FromAddress": "gill@test.com",
+    "ApiKey": "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",
+    "FromName": "Gill"
+  },
+  "Serilog": {
+    "Using": [],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console"
+      }
+    ],
+    "Properties": {
+      "ApplicationName": "Serilog.WebApplication"
+    }
+  },
+  "JwtSettings": {
+    "Key": "84322CFB66934ECC86D547C5CF4F2EFC",
+    "Issuer": "GloboTicketIdentity",
+    "Audience": "GloboTicketIdentityUser",
+    "DurationInMinutes": 60
+  }
 }
