--- a/GloboTicket.TicketManagment.Infrastructure/GloboTicket.TicketManagment.Infrastructure.csproj
+++ b/GloboTicket.TicketManagment.Infrastructure/GloboTicket.TicketManagment.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="12.2.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
     <PackageReference Include="SendGrid" Version="9.24.0" />
   </ItemGroup>
