--- a/GloboTicket.TicketManagement.Persistence/GloboTicket.TicketManagement.Persistence.csproj
+++ b/GloboTicket.TicketManagement.Persistence/GloboTicket.TicketManagement.Persistence.csproj
@@ -11,6 +11,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.10" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.10" />
   </ItemGroup>
 
